--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2043,6 +2043,12 @@ button:focus {
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
+.btn-coral {
+    color: #fff;
+    background-color: #bba377;
+    border-color: #bba377;
+}
+
 .btn-success {
     color: #fff;
     background-color: #1c84c6;
