--- a/public/probiz/css/style.css
+++ b/public/probiz/css/style.css
@@ -1858,7 +1858,7 @@ footer{
   height: 100%;
   width: 100%;
   display: block;
-  background-color: rgba(17, 147, 212, 0.9);
+  background-color: rgba(161, 141, 97, 0.9);
   position: absolute;
   top: 0;
   left: 0;
@@ -2020,10 +2020,9 @@ img.mfp-img {
   margin-top: 0;
 }
 .simpleportfolio-link .link:hover {
-  border-color: #0b628d;
-  background-color: #0d72a5;
+  border-color: #bbb477;
+  background-color: #bba377;;
 }
-
 /*=====header1-page-portfolio-css====*/
 .portfolio-area {
   padding: 100px 0;
